--- a/FPlus-Theme.css
+++ b/FPlus-Theme.css
@@ -210,7 +210,7 @@ li.nested:before
 }
 
 .onoffswitch {
-    position: relative; width: 90px;
+    position: relative; width: 90px; float=right;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
 .onoffswitch-checkbox {
@@ -254,3 +254,8 @@ li.nested:before
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px; 
 }
+
+
+
+.contentContainer{width:500px;}
+.contentText{width:200px; float:left;}
