--- a/FPlus-Theme.css
+++ b/FPlus-Theme.css
@@ -210,7 +210,7 @@ li.nested:before
 }
 
 .onoffswitch {
-    width: 150px; float=right;
+    position:relative; width: 90px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
 .onoffswitch-checkbox {
@@ -254,8 +254,3 @@ li.nested:before
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px; 
 }
-
-
-
-.contentContainer{width:1000px;}
-.contentText{width:500px; float:left;}
